# pptx-agent-toolkit

./: .gitignore  README.md  pyproject.toml
examples/: demo_basic.py
src/pptx_agent_toolkit/: __init__.py  builder.py  color_qa.py  color_utils.py  image_extractor.py  image_insert.py  layout_engine.py  layout_enricher.py  pptx_utils.py
